# pulse

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  DECISIONS.md  PRODUCT_SPEC.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  PRD.md  architecture-review.md  market-research.md
docs/design/stitch/: stitch_ai_workload_updated_code.html  stitch_ai_workload_v3_code.html  stitch_compact_overlay_mode_code.html  stitch_dashboard_updated_code.html  stitch_dashboard_v3_code.html  stitch_feature_enhancements_mcp_update.html  (+5 more)
docs/specs/: NEXT-SESSION.md  PHASE-0.1.md  PHASE-0.2-SPEC.md  PHASE-0.2.md  PHASE-0.3-SPEC.md  PHASE-0.3.md  PHASE-0.4-SPEC.md  PHASE-1.0-SPEC.md  PHASE-1.0.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classify.rs  commands.rs  lib.rs  main.rs  mcp.rs  mcp_handler.rs  notifications.rs  nvml.rs  poller.rs  presentmon.rs  presentmon_download.rs  process.rs  recommendations.rs  session.rs  settings.rs  state.rs  tray.rs  types.rs
src/components/: compact-overlay.tsx
src/hooks/: use-device-info.ts  use-gpu-listener.ts  use-session-replay.ts  use-theme.ts
src/lib/: constants.ts  model-database.ts  ring-buffer.ts  types.ts
src/routes/: ai-workload.tsx  analytics.tsx  dashboard.tsx  gaming-profile.tsx  session-replay.tsx  settings.tsx  vram-planner.tsx
src/stores/: gpu-store.ts  profile-store.ts  session-store.ts  ui-store.ts
(+28 files in other folders)
