[package]
name = "pulse"
version = "0.1.0"
description = "GPU performance intelligence for gaming + AI workloads"
authors = ["Salahuddin"]
edition = "2024"

[lib]
name = "pulse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pulse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nvml-wrapper = { version = "0.11", features = ["serde", "legacy-functions"] }
sysinfo = "0.34"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
